--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "repository": "git@github.com:IgorEmerick/api-kanban.git",
   "author": "Igor Emerick <igorbarbosaemerick@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/server.ts",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/shared/infra/typeorm/data_sources/AppDataSource.ts"
+  },
   "devDependencies": {
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
