--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ DEFAULT_DATABASE_HOST=''
 DEFAULT_DATABASE_PORT=
 DEFAULT_DATABASE_USER=''
 DEFAULT_DATABASE_PASSWORD=''
+
+#AUTHENTICATION
+AUTHENTICATION_SECRET=''
