--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/shared/infra/typeorm/data_sources/DefaultDataSource.ts"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
@@ -36,6 +37,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.12"
